feat: standardize business APIs on post
